--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "lyrics-finder": "^21.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-spotify-web-playback": "^0.14.2",
+    "spotify-web-api-node": "^5.0.2",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -24,5 +31,10 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "react-router-dom": "^6.21.2",
     "vite": "^5.0.8"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
