--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spotify-web-playback": "^0.14.2",
+    "redux": "^5.0.1",
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "^6.1.8"
   },
